--- a/css/sb-paginate-style.css
+++ b/css/sb-paginate-style.css
@@ -1,7 +1,3 @@
-.sb-paginate {
-
-}
-
 .sb-paginate .paginate-item {
 	border-radius: 3px;
     color: #333;
@@ -12,7 +8,7 @@
     text-decoration: none;
 }
 
-.sb-paginate .paginate-item {
+.sb-paginate.default-style .paginate-item {
     background-color: #f4f5f5; background-image: -webkit-gradient(linear, left top, left bottom, from(#f4f5f5), to(#dfdddd));
     background-image: -webkit-linear-gradient(top, #f4f5f5, #dfdddd);
     background-image: -moz-linear-gradient(top, #f4f5f5, #dfdddd);
@@ -21,7 +17,7 @@
     background-image: linear-gradient(to bottom, #f4f5f5, #dfdddd);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#f4f5f5, endColorstr=#dfdddd);
 }
 
-.sb-paginate .paginate-item:hover {
+.sb-paginate.default-style .paginate-item:hover {
     background-color: #d9dddd; background-image: -webkit-gradient(linear, left top, left bottom, from(#d9dddd), to(#c6c3c3));
     background-image: -webkit-linear-gradient(top, #d9dddd, #c6c3c3);
     background-image: -moz-linear-gradient(top, #d9dddd, #c6c3c3);
@@ -30,11 +26,83 @@
     background-image: linear-gradient(to bottom, #d9dddd, #c6c3c3);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#d9dddd, endColorstr=#c6c3c3);
 }
 
-.sb-paginate .paginate-item.current-item {
+.sb-paginate.default-style .paginate-item.current-item {
     background: none repeat scroll 0 0 #00bb64;
+    color: #fff;
+}
+
+.sb-paginate.dark-style .paginate-item {
+	color: #222;
+}
+
+.sb-paginate.dark-style .paginate-item {
+	background-color: #a5b8da; background-image: -webkit-gradient(linear, left top, left bottom, from(#a5b8da), to(#7089b3));
+	background-image: -webkit-linear-gradient(top, #a5b8da, #7089b3);
+	background-image: -moz-linear-gradient(top, #a5b8da, #7089b3);
+	background-image: -ms-linear-gradient(top, #a5b8da, #7089b3);
+	background-image: -o-linear-gradient(top, #a5b8da, #7089b3);
+	background-image: linear-gradient(to bottom, #a5b8da, #7089b3);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#a5b8da, endColorstr=#7089b3);
+}
+
+.sb-paginate.dark-style .paginate-item:hover {
+	background-color: #819bcb; background-image: -webkit-gradient(linear, left top, left bottom, from(#819bcb), to(#536f9d));
+	background-image: -webkit-linear-gradient(top, #819bcb, #536f9d);
+	background-image: -moz-linear-gradient(top, #819bcb, #536f9d);
+	background-image: -ms-linear-gradient(top, #819bcb, #536f9d);
+	background-image: -o-linear-gradient(top, #819bcb, #536f9d);
+	background-image: linear-gradient(to bottom, #819bcb, #536f9d);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#819bcb, endColorstr=#536f9d);
+}
+
+.sb-paginate.dark-style .paginate-item.current-item {
+    background: none repeat scroll 0 0 #7d7e7d;
+    color: #fff;
+}
+
+.sb-paginate.orange-style .paginate-item {
+	color: #fefefe;
+}
+
+.sb-paginate.orange-style .paginate-item {
+	background-color: #ffc579; background-image: -webkit-gradient(linear, left top, left bottom, from(#ffc579), to(#fb9d23));
+	background-image: -webkit-linear-gradient(top, #ffc579, #fb9d23);
+	background-image: -moz-linear-gradient(top, #ffc579, #fb9d23);
+	background-image: -ms-linear-gradient(top, #ffc579, #fb9d23);
+	background-image: -o-linear-gradient(top, #ffc579, #fb9d23);
+	background-image: linear-gradient(to bottom, #ffc579, #fb9d23);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#ffc579, endColorstr=#fb9d23);
+}
+
+.sb-paginate.orange-style .paginate-item:hover {
+	background-color: #ffaf46; background-image: -webkit-gradient(linear, left top, left bottom, from(#ffaf46), to(#e78404));
+	background-image: -webkit-linear-gradient(top, #ffaf46, #e78404);
+	background-image: -moz-linear-gradient(top, #ffaf46, #e78404);
+	background-image: -ms-linear-gradient(top, #ffaf46, #e78404);
+	background-image: -o-linear-gradient(top, #ffaf46, #e78404);
+	background-image: linear-gradient(to bottom, #ffaf46, #e78404);filter:progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr=#ffaf46, endColorstr=#e78404);
+}
+
+.sb-paginate.orange-style .paginate-item.current-item {
+    background: none repeat scroll 0 0 #ffe28e;
     color: #fff;
 }
 
 .sb-paginate a:focus {
 	outline: 0 none;
+}
+
+.sb-paginate.no-border-radius .paginate-item {
+	border-radius: 0;
+}
+
+.sb-paginate.border-radius-circle .paginate-item {
+	border-radius: 50%;
+    display: inline-block;
+    line-height: 23px;
+    text-align: center;
+    width: 3.5%;
+}
+
+.sb-paginate.border-radius-circle .paginate-item.label-item {
+	background: none repeat scroll 0 0 transparent;
+    color: #333;
+    width: auto;
 }
